Replace deprecated URL(String).